http: Fix segfault when seeking on read

Previously, the dav backend would segfault when reading after a seek (or
also if you did a read_async() without an explicit send()/send_async()
first) because the stream from soup_request_send_finish() was not being
stored, so store it.

https://bugzilla.gnome.org/show_bug.cgi?id=710534